<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/feedback_bg">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_title_height">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback_title"
            android:textColor="#191919"
            android:textSize="@dimen/feedback_text_size_16" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/dialog_close" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feedback_marin_15"
            android:layout_marginTop="@dimen/feedback_marin_12"
            android:text="@string/feedback_type"
            android:textColor="#191919"
            android:textSize="@dimen/feedback_text_size_14" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/feedback_marin_17"
            android:layout_marginTop="@dimen/feedback_marin_17"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_btn_func_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/feedback_suggest"
                android:textColor="#191919"
                android:textSize="@dimen/feedback_text_size_13"
                android:theme="@style/FeebackRadioButton" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radio_btn_tucao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/feedback_pei"
                android:textColor="#191919"
                android:textSize="@dimen/feedback_text_size_13"
                android:theme="@style/FeebackRadioButton" />

        </RadioGroup>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/other_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_layout"
        android:layout_marginTop="@dimen/feedback_marin_15"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/feedback_marin_15"
            android:text="@string/feedback_describe"
            android:textColor="#191919"
            android:textSize="@dimen/feedback_text_size_14" />

        <EditText
            android:id="@+id/content_edit"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="@dimen/feedback_marin_15"
            android:layout_marginRight="@dimen/feedback_marin_15"
            android:layout_marginTop="@dimen/feedback_marin_15"
            android:background="@drawable/feedback_edit_bg"
            android:gravity="left"
            android:hint="@string/feedback_hint1"
            android:maxLength="200"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:textColor="#728bae"
            android:textColorHint="#728bae"
            android:textSize="@dimen/feedback_text_size_12" />


        <EditText
            android:id="@+id/contact_edit"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="@dimen/feedback_marin_15"
            android:layout_marginRight="@dimen/feedback_marin_15"
            android:layout_marginTop="@dimen/feedback_marin_10"
            android:background="@drawable/feedback_edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/feedback_hint2"
            android:maxLength="40"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#728bae"
            android:textColorHint="#728bae"
            android:textSize="@dimen/feedback_text_size_12"
            android:digits="@string/rule_text"/>


        <TextView
            android:id="@+id/post_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/feedback_marin_25"
            android:layout_marginLeft="@dimen/feedback_marin_15"
            android:layout_marginRight="@dimen/feedback_marin_15"
            android:layout_marginTop="@dimen/feedback_marin_20"
            android:background="@drawable/feedback_btn_bg"
            android:gravity="center"
            android:text="@string/feedback_submit"
            android:textColor="#ffffff"
            android:textSize="@dimen/feedback_text_size_16" />

    </LinearLayout>

</RelativeLayout>